# path-integral-sampler

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: api.md  conf.py  index.md
scripts/: gaussian-mixture-1d.py  gaussian-mixture-2d.py
scripts/output/: README.md
src/pathint/: sampler.py
src/pathint/nn/: control_net.py  init.py
src/pis/: sampler.py
src/pis/nn/: __init__.py  composed.py  control_net.py  initializers.py  linear.py  positional_encoding.py
